--- a/src/Layout.module.css
+++ b/src/Layout.module.css
@@ -1,16 +1,21 @@
 .header {
     display: flex;
-    width: 100%;
-    background-color: rgb(189, 96, 96);
+    background-color: rgb(52, 139, 52);
     color: white;
     padding: 16px;
-    justify-content: center;
+    justify-content: space-between;
+
+    span {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .headerLinks {
     display: flex;
     gap: 20px;
     list-style-type: none;
+    margin-right: 2em;
 }
 
 .headerLinks a:link,
@@ -19,4 +24,9 @@
 .headerLinks a:active {
     color: white;
     text-decoration: none;
+}
+
+.primaryContainer{
+    padding: 4px;
+    background-color: rgb(211, 238, 247);
 }
